# DXUT

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DXUT_2010.sln  DXUT_2010_SDK81.sln  DXUT_2012.sln  DXUT_2013.sln  DXUT_2013_Win10.sln  DXUT_2015.sln  DXUT_2017_Win10.sln  DXUT_2019_Win10.sln  DXUT_2022_Win10.sln  DXUT_DirectXTK_2012.sln  DXUT_DirectXTK_2013.sln  DXUT_DirectXTK_2015.sln  DXUT_DirectXTK_2015_Win10.sln  DXUT_DirectXTK_2017.sln  DXUT_DirectXTK_2017_Win10.sln  DXUT_DirectXTK_2022_Win10.sln  HISTORY.md  README.md  ReadMe.txt  Windows10SDKVS13_x64.props
.azuredevops/pipelines/: DXUT-GitHub-CMake-Dev17.yml  DXUT-GitHub-CMake.yml  DXUT-GitHub-Dev17.yml  DXUT-GitHub-MinGW.yml  DXUT-GitHub.yml  DXUT-SDL.yml
.github/workflows/: codeql.yml  lint.yml  main.yml  msbuild.yml  msvc.yml
Core/: DDSTextureLoader.cpp  DDSTextureLoader.h  DXUT.cpp  DXUT.h  DXUTDevice11.cpp  DXUTDevice11.h  DXUT_2010.vcxproj  DXUT_2013.vcxproj  DXUT_2015.vcxproj  DXUT_2015_Win10.vcxproj  DXUT_2017_Win10.vcxproj  DXUT_2022_Win10.vcxproj  DXUT_DirectXTK_2013.vcxproj  DXUT_DirectXTK_2015.vcxproj  DXUT_DirectXTK_2015_Win10.vcxproj  DXUT_DirectXTK_2017_Win10.vcxproj  DXUT_DirectXTK_2019_Win10.vcxproj  DXUT_DirectXTK_2022_Win10.vcxproj  DXUTmisc.cpp  DXUTmisc.h  ScreenGrab.cpp  ScreenGrab.h  WICTextureLoader.cpp  WICTextureLoader.h  dxerr.cpp  dxerr.h
Optional/: DXUTLockFreePipe.h  DXUTOpt_2010.vcxproj  DXUTOpt_2013.vcxproj  DXUTOpt_2015.vcxproj  DXUTOpt_2015_Win10.vcxproj  DXUTOpt_2017_Win10.vcxproj  DXUTOpt_2022_Win10.vcxproj  DXUTOpt_DirectXTK_2013.vcxproj  DXUTOpt_DirectXTK_2015.vcxproj  DXUTOpt_DirectXTK_2015_Win10.vcxproj  DXUTOpt_DirectXTK_2017_Win10.vcxproj  DXUTOpt_DirectXTK_2019_Win10.vcxproj  DXUTOpt_DirectXTK_2022_Win10.vcxproj  DXUTcamera.cpp  DXUTcamera.h  DXUTgui.cpp  DXUTgui.h  DXUTguiIME.cpp  DXUTguiIME.h  DXUTres.cpp  DXUTres.h  DXUTsettingsdlg.cpp  DXUTsettingsdlg.h  ImeUi.cpp  ImeUi.h  SDKmesh.cpp  SDKmesh.h  SDKmisc.cpp  SDKmisc.h
